--- a/src/components/Navigation/styles.css
+++ b/src/components/Navigation/styles.css
@@ -3,7 +3,7 @@
     align-items: center;
     border-bottom: 1px solid black;
     position: relative;
-    z-index: 9999;
+    z-index: 10;
 }
 
 .navbar svg {
@@ -75,4 +75,14 @@
     height: 50px;
     width: 100%;
     z-index: 1;
+}
+
+.nav-icons button {
+    cursor: pointer;
+    height: 30px;
+    margin-left: 20px;
+    font-size: 15px;
+    font-weight: bold;
+    border-radius: 5px;
+    border: 2px solid black;
 }
