--- a/src/components/Auth/styles.css
+++ b/src/components/Auth/styles.css
@@ -31,3 +31,42 @@
 .auth-container .input-container {
     margin-top: 20px;
 }
+
+.login-switch {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: auto;
+    margin-bottom: 10px;
+}
+
+.login-switch p {
+    margin: 10px 5px 10px 5px;
+}
+
+.social-login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 30%;
+    margin-top: auto;
+}
+
+.social-login button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid black;
+    border-radius: 5px;
+    font-size: 15px;
+    font-weight: bold;
+    cursor: pointer;
+    background-color: whitesmoke;
+}
+
+.social-login button:hover {
+    background-color: rgba(192, 192, 192, 0.3);
+    transition: 0.3s ease-in-out;
+}
