--- a/src/components/Auth/styles.css
+++ b/src/components/Auth/styles.css
@@ -63,7 +63,7 @@
     font-size: 15px;
     font-weight: bold;
     cursor: pointer;
-    background-color: whitesmoke;
+    background-color: skyblue;
 }
 
 .social-login button:hover {
