--- a/src/components/Post/styles.css
+++ b/src/components/Post/styles.css
@@ -54,6 +54,10 @@
     cursor: pointer;
 }
 
+.post-types div:hover {
+    background-color: #e7e2e2;
+}
+
 .post-form-container {
     border: 1px solid black;
     border-top: none;
@@ -97,4 +101,33 @@
     border: none;
     border-left: 1px solid black;
     width: 100%;
+}
+
+.post-form button {
+    margin-left: auto;
+    margin-right: 30px;
+    margin-top: 10px;
+    padding: 8px;
+    background-color: skyblue;
+    border: 2px solid black;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.poll-option-container, .file-container {
+    border: 1px solid gray;
+    padding: 15px 10px 0 10px;
+}
+
+.poll-option-container input {
+    width: 250px;
+}
+
+.poll-option-container button {
+    margin: 0 0 15px 20px;
+}
+
+.inactive {
+    background-color: gray !important;
 }
