--- a/src/components/Profile/styles.css
+++ b/src/components/Profile/styles.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 54px);
     border: 1px solid blue;
 }
 
