--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,26 @@ code {
 .overlay::-webkit-scrollbar {
   width: 0;
 }
+
+.error-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  cursor: default;
+}
+
+.error-container h1 {
+  line-height: 5px;
+}
+
+.error-container b {
+  cursor: pointer;
+}
+
+.loading-icon {
+  margin: auto;
+  height: 50px;
+  width: 50px;
+}
