--- a/src/components/Profile/styles.css
+++ b/src/components/Profile/styles.css
@@ -12,3 +12,69 @@
     justify-content: center;
     font-size: 15px;
 }
+
+.user-posts-container {
+    display: flex;
+    flex-direction: column;
+    height: 70%;
+    min-height: 500px;
+    margin-top: auto;
+}
+
+.sort-bar {
+    display: flex;
+    width: 100%;
+    align-items: center;
+}
+
+.sort-bar p {
+    margin: 5px 0 5px 0;
+    width: 33.33%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.user-posts {
+    display: flex;
+    height: 100%;
+    overflow-y: scroll;
+    flex-direction: column;
+    align-items: center;
+}
+
+.post-card-container {
+    display: flex;
+    width: 100%;
+    height: 150px;
+    border: 1px solid black;
+    border-top: none;
+}
+
+.vote-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 100%;
+    border-right: 1px solid black;
+}
+
+.vote-container svg {
+    width: 30px;
+    height: 30px;
+    margin: 10px;
+    cursor: pointer;
+}
+
+.post-content {
+    padding: 5px;
+}
+
+.post-content h1 {
+    margin-top: 0;
+    font-size: 20px;
+}
