--- a/src/components/Profile/styles.css
+++ b/src/components/Profile/styles.css
@@ -74,7 +74,16 @@
     padding: 5px;
 }
 
+.post-content p {
+    font-size: 12px;
+    margin: 0;
+}
+
 .post-content h1 {
-    margin-top: 0;
+    margin: 0;
     font-size: 20px;
+}
+
+.post-content h2 {
+    font-size: 13px;
 }
