--- a/src/components/Profile/styles.css
+++ b/src/components/Profile/styles.css
@@ -2,8 +2,10 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    max-width: 1100px;
     height: calc(100% - 54px);
-    border: 1px solid blue;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .profile-info {
@@ -40,16 +42,17 @@
 .user-posts {
     display: flex;
     height: 100%;
-    overflow-y: scroll;
     flex-direction: column;
     align-items: center;
+    border: 1px solid black;
+    border-top: none;
 }
 
 .post-card-container {
     display: flex;
     width: 100%;
     height: 150px;
-    border: 1px solid black;
+    border-bottom: 1px solid black;
     border-top: none;
 }
 
@@ -72,6 +75,11 @@
 
 .post-content {
     padding: 5px;
+    cursor: pointer;
+}
+
+.post-content b:hover {
+    border-bottom: 1px solid black;
 }
 
 .post-content p {
