--- a/src/components/Post/styles.css
+++ b/src/components/Post/styles.css
@@ -134,6 +134,39 @@
 
 .post-page-container {
     height: calc(100% - 54px);
+    width: 100vw;
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+.post-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    max-width: 800px;
+    margin-top: 20px;
+}
+
+.post-content-container {
+    display: flex;
+    border: 1px solid black;
+}
+
+.post-content-container .post-content {
+    padding: 5px;
+    cursor: default;
+}
+
+.post-content-container .post-content h1 {
+    margin: 0;
+    margin-bottom: 10px;
+    font-size: 25px;
+}
+
+.post-comment-container {
+    min-height: 200px;
+    margin-top: 20px;
+    border: 1px solid black;
 }
