community form overlay

--- a/src/components/Post/styles.css
+++ b/src/components/Post/styles.css
@@ -132,20 +132,18 @@
     background-color: gray !important;
 }
 
-<<<<<<< HEAD
-.community-content {
+.community-button {
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
-.community-content button {
+.community-button button {
     height: 35px;
     margin-top: 15px;
     cursor: pointer;
 }
 
-=======
 .post-page-container {
     height: calc(100% - 54px);
     width: 100vw;
@@ -184,4 +182,3 @@
     margin-top: 20px;
     border: 1px solid black;
 }
->>>>>>> 1dd5dc48a79bed17ab025fffd9edea81ea995012
