--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,14 @@ code {
   height: 50px;
   width: 50px;
 }
+
+.modal {
+    background-color: white;
+    width: 50%;
+    min-width: 500px;
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+    padding: 20px;
+}
