--- a/src/components/Profile/styles.css
+++ b/src/components/Profile/styles.css
@@ -60,7 +60,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     width: 50px;
     height: 100%;
     border-right: 1px solid black;
@@ -69,7 +68,7 @@
 .vote-container svg {
     width: 30px;
     height: 30px;
-    margin: 10px;
+    margin: 5px;
     cursor: pointer;
 }
 
@@ -78,7 +77,7 @@
     cursor: pointer;
 }
 
-.post-content b:hover {
+.post-content b:hover, .comment-form b:hover {
     border-bottom: 1px solid black;
     cursor: pointer;
 }
