--- a/src/components/Inbox/styles.css
+++ b/src/components/Inbox/styles.css
@@ -1,5 +1,19 @@
 .inbox-container {
     display: flex;
-    border: 1px solid red;
+    justify-content: center;
     height: calc(100% - 54px);
+}
+
+.chats-container {
+    width: 30%;
+    max-width: 300px;
+    height: 100%;
+    border: 1px solid blue;
+}
+
+.messages-container {
+    width: 70%;
+    max-width: 800px;
+    height: 100%;
+    border: 1px solid green;
 }
