chat creation working

--- a/src/components/Navigation/styles.css
+++ b/src/components/Navigation/styles.css
@@ -79,7 +79,11 @@
     left: 0;
     height: 50px;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
+}
+
+.drop-search .input-container {
+    background-color: white;
 }
 
 .nav-icons button {
