--- a/src/components/Inbox/styles.css
+++ b/src/components/Inbox/styles.css
@@ -1,19 +1,129 @@
-.inbox-container {
+.page-container {
     display: flex;
     justify-content: center;
     height: calc(100% - 54px);
+    overflow-y: hidden;
+}
+
+.inbox-container {
+    width: 30%;
+    min-width: 190px;
+    max-width: 300px;
+    height: 100%;
+    border-right: 1px solid black;
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
+}
+
+.chats-header {
+    display: flex;
+    align-items: center;
+    height: 35px;
+    border-bottom: 1px solid black;
+}
+
+.chats-header input {
+    height: 100%;
+    width: calc(100% - 35px);
+    border: none;
+    outline: none;
+    font-size: 18px;
+}
+
+.chats-header svg {
+    margin: 0;
+    margin-left: auto;
+    width: 35px;
+    height: 35px;
+    border-left: 1px solid black;
+    padding-bottom: 5px;
+    cursor: pointer;
 }
 
 .chats-container {
-    width: 30%;
-    max-width: 300px;
-    height: 100%;
-    border: 1px solid blue;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    height: calc(100% - 35px);
+    min-height: 470px;
+    position: relative;
+}
+
+.empty-chats {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+}
+
+.empty-chats p {
+    margin-bottom: 0;
+}
+
+.chat-modal {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    height: 125px;
+    margin-top: 1px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: white;
+    position: relative;
+}
+
+.chat-modal svg {
+    cursor: pointer;
+    margin-left: auto;
+}
+
+.chat-modal form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.chat-modal input {
+    margin-top: 10px;
+    height: 30px;
+    outline: none;
+    font-size: 16px;
+    width: 95%;
+    margin-bottom: 15px;
+}
+
+.chat-modal button {
+    padding: 5px;
+    background-color: skyblue;
+    border: 2px solid black;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.chat-modal p {
+    color: red;
+    margin: 0;
+    font-size: 14px;
+    position: absolute;
+    top: 10px;
+    left: 5px;
 }
 
 .messages-container {
     width: 70%;
     max-width: 800px;
     height: 100%;
-    border: 1px solid green;
+    min-height: 500px;
+    overflow-y: scroll;
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
+}
+
+.chat-card {
+    width: 100%;
 }
