--- a/src/components/Inbox/styles.css
+++ b/src/components/Inbox/styles.css
@@ -125,5 +125,16 @@
 }
 
 .chat-card {
+    display: flex;
+    flex-direction: column;
     width: 100%;
+    height: 150px;
+    border-bottom: 1px solid black;
+    cursor: pointer;
+}
+
+.chat-card h1 {
+    font-size: 16px;
+    align-self: center;
+    text-align: center;
 }
