--- a/src/components/Inbox/styles.css
+++ b/src/components/Inbox/styles.css
@@ -41,11 +41,10 @@
 }
 
 .chats-container {
-    display: flex;
-    flex-direction: column;
     overflow-y: scroll;
     height: calc(100% - 35px);
     min-height: 470px;
+    height: 100px;
     position: relative;
 }
 
@@ -114,16 +113,6 @@
     left: 5px;
 }
 
-.messages-container {
-    width: 70%;
-    max-width: 800px;
-    height: 100%;
-    min-height: 500px;
-    overflow-y: scroll;
-    border-right: 1px solid black;
-    border-bottom: 1px solid black;
-}
-
 .chat-card {
     display: flex;
     flex-direction: column;
@@ -160,4 +149,26 @@
 .chats-container .active {
     background-color: black;
     color: white;
+}
+
+.messages-container {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    max-width: 800px;
+    height: 100%;
+    min-height: 500px;
+    overflow-y: scroll;
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
+}
+
+.messages-container .empty-chats {
+    margin-top: auto;
+}
+
+.new-message {
+    display: flex;
+    width: 100%;
+    margin-top: auto;
 }
