--- a/src/components/Post/styles.css
+++ b/src/components/Post/styles.css
@@ -123,25 +123,29 @@
     background-color: white;
     width: 101%;
     left: -1px;
+    border-top: none;
+    border: 1px solid rgba(0,0,0,0.2);
 }
 
 .community-name {
     height: 35px;
-    border: 1px solid black;
-    border-top: none;
     cursor: pointer;
 }
 
 .community-button {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 }
 
 .community-button button {
     height: 35px;
     margin-top: 15px;
+    background-color: skyblue;
+    border: 2px solid black;
+    font-weight: bold;
     cursor: pointer;
+    margin-left: 10px;
 }
 
 .post-page-container {
@@ -227,4 +231,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+
+.no-results-found {
+    position: absolute;
+    height: 35px;
+    cursor: pointer;
+    border-top: none;
+    border: 1px solid rgba(0,0,0,0.2);
+    width: 101%;
+    background-color: white;
+    left: -1px;
 }
