--- a/src/components/Inbox/styles.css
+++ b/src/components/Inbox/styles.css
@@ -166,6 +166,19 @@
     margin-top: auto;
 }
 
+.messages-heading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 50px;
+    width: 100%;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    border-bottom: 1px solid black;
+    background-color: rgba(189, 189, 189, 0.8);
+}
+
 .new-message {
     display: flex;
     width: 100%;
@@ -174,6 +187,7 @@
 }
 
 .new-message input {
+    min-height: 35px;
     width: 90%;
     border: none;
     outline: none;
@@ -190,3 +204,90 @@
     font-size: 16px;
     cursor: pointer;
 }
+
+.message-container {
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+    cursor: default;
+}
+
+.message-container p {
+    border-radius: 20px;
+    padding: 8px 15px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    display: inline-block;
+}
+
+.them {
+    align-self: flex-start;
+    margin-left: 15px;
+}
+
+.them {
+    margin-right: 25%;
+    background-color: #eee;
+    position: relative;
+  }
+  
+.them:before {
+    content: "";
+    position: absolute;
+    z-index: 0;
+    bottom: 0;
+    left: -7px;
+    height: 20px;
+    width: 20px;
+    background: #eee;
+    border-bottom-right-radius: 15px;
+}
+.them:after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    bottom: 0;
+    left: -10px;
+    width: 10px;
+    height: 20px;
+    background: white;
+    border-bottom-right-radius: 10px;
+}
+
+.me {
+    align-self: flex-end;
+    margin-right: 15px;
+}
+
+.me {
+    color: white;
+    margin-left: 25%;
+    background: linear-gradient(to bottom, #00D0EA 0%, #0085D1 100%);
+    background-attachment: fixed;
+    position: relative;
+}
+
+.me:before {
+    content: "";
+    position: absolute;
+    z-index: 0;
+    bottom: 0;
+    right: -8px;
+    height: 20px;
+    width: 20px;
+    background: linear-gradient(to bottom, #00D0EA 0%, #0085D1 100%);
+    background-attachment: fixed;
+    border-bottom-left-radius: 15px;
+}
+
+.me:after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    bottom: 0;
+    right: -10px;
+    width: 10px;
+    height: 20px;
+    background: white;
+    border-bottom-left-radius: 10px;
+}  
